--- a/src/app/view/editar-livro/editar-livro.component.html
+++ b/src/app/view/editar-livro/editar-livro.component.html
@@ -8,7 +8,7 @@
                             <div class="foto">
                                 <button class="btn">Selecionar imagem</button>
                                 <input type="file" name="upfile" (change)="selectImage($event)" required>
-                                <img *ngIf="this.images" src="https://api-node-production.up.railway.app/uploads/{{this.images.name}}">
+                                <!-- <img *ngIf="this.images" src="https://api-node-production.up.railway.app/uploads/{{this.images.name}}"> -->
                             </div>
                         </div>
                         
